--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,11 +3,12 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "src/app/User.ts",
+    "src/app/RegisterUser.ts",
   ],
   "include": [
     "src/**/*.d.ts"
